--- a/examples/agents/example_agents.ipynb
+++ b/examples/agents/example_agents.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "8ae05a02",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "52452c6e",
    "metadata": {},
    "outputs": [
@@ -45,57 +45,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Python** is a high-level, interpreted, general-purpose programming language known for its simplicity, readability, and versatility. Created by **Guido van Rossum** and first released in **1991**, Python was designed with an emphasis on code readability and a syntax that allows programmers to express concepts in fewer lines of code than languages like C++ or Java.\n",
+      "**Python** is a high-level, interpreted, general-purpose programming language known for its simplicity, readability, and versatility. Created by **Guido van Rossum** and first released in **1991**, Python was designed to emphasize code readability and allow programmers to express concepts in fewer lines of code than languages like C++ or Java.\n",
       "\n",
       "### Key Features of Python:\n",
       "\n",
-      "1. **Easy to Learn and Use**  \n",
-      "   Python’s syntax is clean and intuitive, making it an excellent choice for beginners and experienced developers alike.\n",
+      "1. **Readable and Simple Syntax**  \n",
+      "   Python uses clear, English-like syntax with significant whitespace (indentation) to define code blocks, making it easy to learn and write — even for beginners.\n",
       "\n",
       "2. **Interpreted Language**  \n",
-      "   Python code is executed line by line by an interpreter, which makes it platform-independent and easier to debug.\n",
+      "   Python code is executed line-by-line by an interpreter, which makes it platform-independent and easier to debug.\n",
       "\n",
-      "3. **Cross-Platform**  \n",
-      "   Python runs on various operating systems including Windows, macOS, Linux, and more.\n",
-      "\n",
-      "4. **Dynamically Typed**  \n",
+      "3. **Dynamically Typed**  \n",
       "   You don’t need to declare variable types explicitly — Python infers them at runtime.\n",
       "\n",
-      "5. **Rich Standard Library**  \n",
-      "   Python comes with a vast standard library that supports many common programming tasks (e.g., file I/O, web protocols, data structures, etc.).\n",
+      "4. **Multi-Paradigm**  \n",
+      "   Supports multiple programming styles: procedural, object-oriented, and functional programming.\n",
       "\n",
-      "6. **Extensive Ecosystem and Third-Party Packages**  \n",
-      "   Through **PyPI** (Python Package Index), developers can access hundreds of thousands of libraries for tasks like data analysis (`pandas`), machine learning (`scikit-learn`, `TensorFlow`), web development (`Django`, `Flask`), automation, and more.\n",
+      "5. **Extensive Standard Library**  \n",
+      "   Python comes with a rich standard library that includes modules for file I/O, web development, data structures, networking, testing, and more.\n",
       "\n",
-      "7. **Supports Multiple Programming Paradigms**  \n",
-      "   Python supports procedural, object-oriented, and functional programming styles.\n",
+      "6. **Large Ecosystem and Community**  \n",
+      "   Python has a vast collection of third-party packages via **PyPI (Python Package Index)** — tools like `numpy`, `pandas`, `matplotlib`, `django`, `flask`, `tensorflow`, and `scikit-learn` make it powerful for almost any task.\n",
       "\n",
-      "8. **Strong Community Support**  \n",
-      "   Python has one of the largest and most active developer communities, offering abundant tutorials, forums, and open-source projects.\n",
+      "7. **Cross-Platform**  \n",
+      "   Runs on Windows, macOS, Linux, and other systems without modification.\n",
       "\n",
-      "### Common Uses of Python:\n",
-      "- **Web Development** (Django, Flask)\n",
-      "- **Data Science & Machine Learning** (NumPy, Pandas, Scikit-learn, TensorFlow)\n",
-      "- **Automation & Scripting**\n",
-      "- **Scientific Computing**\n",
-      "- **Cybersecurity & Penetration Testing**\n",
-      "- **Game Development** (Pygame)\n",
-      "- **Desktop Applications** (Tkinter, PyQt)\n",
-      "- **Network Programming**\n",
-      "- **DevOps & Cloud Tools**\n",
+      "8. **Used in Many Fields**  \n",
+      "   Python is widely used in:\n",
+      "   - Web development (Django, Flask)\n",
+      "   - Data science and machine learning (Pandas, Scikit-learn, TensorFlow, PyTorch)\n",
+      "   - Automation and scripting\n",
+      "   - Scientific computing\n",
+      "   - Cybersecurity\n",
+      "   - Game development (Pygame)\n",
+      "   - Desktop applications (Tkinter, PyQt)\n",
+      "   - DevOps and cloud infrastructure\n",
       "\n",
-      "### Example of Python Code:\n",
+      "### Example: A Simple Python Program\n",
+      "\n",
       "```python\n",
       "print(\"Hello, World!\")\n",
-      "\n",
-      "# Simple function\n",
-      "def greet(name):\n",
-      "    return f\"Hello, {name}!\"\n",
-      "\n",
-      "print(greet(\"Alice\"))\n",
       "```\n",
       "\n",
-      "Python’s combination of power, simplicity, and flexibility has made it one of the **most popular programming languages in the world**, consistently ranking at or near the top in language popularity indices like the TIOBE Index and GitHub’s Octoverse reports.\n"
+      "This simple line demonstrates Python’s clean and intuitive syntax.\n",
+      "\n",
+      "### Why Is Python Popular?\n",
+      "\n",
+      "- **Beginner-friendly**: Often the first language taught in coding bootcamps and universities.\n",
+      "- **High demand**: One of the most sought-after skills in tech jobs.\n",
+      "- **Rapid development**: Enables fast prototyping and iteration.\n",
+      "\n",
+      "In short, **Python is a powerful, flexible, and accessible language** that powers everything from websites and apps to AI models and scientific research.\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "7b48aac8",
    "metadata": {},
    "outputs": [
@@ -201,6 +201,81 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6fe4c389",
+   "metadata": {},
+   "source": [
+    "**Как вообще это работает?**\n",
+    "\n",
+    "Полученная JSON-строка передается в Pydantic модель через метод model_validate_json(), который:​\n",
+    "- Парсит JSON-строку\n",
+    "- Проверяет соответствие типам\n",
+    "- Приводит данные к нужным типам (если возможно)\n",
+    "- Выбрасывает ValidationError при ошибках\n",
+    "- Возвращает типизированный Python-объект"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "19058c7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Алина Б.\n",
+      "<class '__main__.ContactInfo'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "json_response = '{\"name\": \"Алина Б.\", \"phone\": \"+79991234567\", \"date\": \"2025-11-11\"}'\n",
+    "\n",
+    "user = ContactInfo.model_validate_json(json_response)\n",
+    "\n",
+    "print(user.name)  \n",
+    "print(type(user))  # <class 'ContactInfo'>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e5eb754",
+   "metadata": {},
+   "source": [
+    "Специально передадим неверный тип данных:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a2e422e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for ContactInfo\nphone\n  Input should be a valid string [type=string_type, input_value=79991234567, input_type=int]\n    For further information visit https://errors.pydantic.dev/2.12/v/string_type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[50]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m json_response = \u001b[33m'\u001b[39m\u001b[33m{\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mname\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m: \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mАлина Б.\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mphone\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m: 79991234567, \u001b[39m\u001b[33m\"\u001b[39m\u001b[33mdate\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m: \u001b[39m\u001b[33m\"\u001b[39m\u001b[33m2025-11-11\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m}\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m user = \u001b[43mContactInfo\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmodel_validate_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjson_response\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(user.name)  \n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(user))  \u001b[38;5;66;03m# <class 'ContactInfo'>\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/llm/lib/python3.11/site-packages/pydantic/main.py:766\u001b[39m, in \u001b[36mBaseModel.model_validate_json\u001b[39m\u001b[34m(cls, json_data, strict, extra, context, by_alias, by_name)\u001b[39m\n\u001b[32m    760\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m by_alias \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m by_name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m    761\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m PydanticUserError(\n\u001b[32m    762\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mAt least one of `by_alias` or `by_name` must be set to True.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    763\u001b[39m         code=\u001b[33m'\u001b[39m\u001b[33mvalidate-by-alias-and-name-false\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    764\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m766\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_json\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    767\u001b[39m \u001b[43m    \u001b[49m\u001b[43mjson_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextra\u001b[49m\u001b[43m=\u001b[49m\u001b[43mextra\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcontext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mby_alias\u001b[49m\u001b[43m=\u001b[49m\u001b[43mby_alias\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mby_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mby_name\u001b[49m\n\u001b[32m    768\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValidationError\u001b[39m: 1 validation error for ContactInfo\nphone\n  Input should be a valid string [type=string_type, input_value=79991234567, input_type=int]\n    For further information visit https://errors.pydantic.dev/2.12/v/string_type"
+     ]
+    }
+   ],
+   "source": [
+    "json_response = '{\"name\": \"Алина Б.\", \"phone\": 79991234567, \"date\": \"2025-11-11\"}'\n",
+    "\n",
+    "user = ContactInfo.model_validate_json(json_response)\n",
+    "\n",
+    "print(user.name)  \n",
+    "print(type(user))  # <class 'ContactInfo'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9bd3717a",
    "metadata": {},
    "source": [
@@ -209,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "ce26aa49",
    "metadata": {},
    "outputs": [],
@@ -240,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "769ce3ac",
    "metadata": {},
    "outputs": [
@@ -268,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "4d30c569",
    "metadata": {},
    "outputs": [],
@@ -278,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "bc79059e",
    "metadata": {},
    "outputs": [
@@ -288,7 +363,7 @@
        "4"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,20 +374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "id": "c05a8fff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[HumanMessage(content='10+8*8', additional_kwargs={}, response_metadata={}, id='65d5e83f-7235-4d45-8597-d20b6fe9205c'),\n",
-       " AIMessage(content='', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 24, 'prompt_tokens': 236, 'total_tokens': 260, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'reasoning_tokens': 0}, 'model_provider': 'openai', 'model_name': 'Qwen/Qwen3-Next-80B-A3B-Instruct', 'system_fingerprint': None, 'id': '449fdf6d33ff4d32b9db8558730b21b4', 'finish_reason': 'tool_calls', 'logprobs': None}, id='lc_run--c44d8690-0318-43cf-9b96-19d0260f8590-0', tool_calls=[{'name': 'calculate', 'args': {'expression': '10+8*8'}, 'id': 'call_64ce7057e2604f37ad2c094b', 'type': 'tool_call'}], usage_metadata={'input_tokens': 236, 'output_tokens': 24, 'total_tokens': 260, 'input_token_details': {}, 'output_token_details': {}}),\n",
-       " ToolMessage(content='Результат: 74', name='calculate', id='0b57a471-e645-4053-ab2c-529c8fd49797', tool_call_id='call_64ce7057e2604f37ad2c094b'),\n",
-       " AIMessage(content='Результат вычисления выражения 10 + 8 * 8 равен 74.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 23, 'prompt_tokens': 279, 'total_tokens': 302, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'reasoning_tokens': 0}, 'model_provider': 'openai', 'model_name': 'Qwen/Qwen3-Next-80B-A3B-Instruct', 'system_fingerprint': None, 'id': '64cab38c6ce244ec920731ad1191f3cf', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--8eff3b62-d1b0-4645-be20-6826768730b7-0', usage_metadata={'input_tokens': 279, 'output_tokens': 23, 'total_tokens': 302, 'input_token_details': {}, 'output_token_details': {}})]"
+       "[HumanMessage(content='10+8*8', additional_kwargs={}, response_metadata={}, id='d0989026-9713-400e-940f-6549e6a3d1a8'),\n",
+       " AIMessage(content='', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 24, 'prompt_tokens': 230, 'total_tokens': 254, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'reasoning_tokens': 0}, 'model_provider': 'openai', 'model_name': 'Qwen/Qwen3-Next-80B-A3B-Instruct', 'system_fingerprint': None, 'id': '57ad349ac5b240629d5c1bec784a9dfe', 'finish_reason': 'tool_calls', 'logprobs': None}, id='lc_run--3291231c-4461-4572-ad44-7405383a722b-0', tool_calls=[{'name': 'calculate', 'args': {'expression': '10+8*8'}, 'id': 'call_aefe29e8a75e4af4aa0b84c0', 'type': 'tool_call'}], usage_metadata={'input_tokens': 230, 'output_tokens': 24, 'total_tokens': 254, 'input_token_details': {}, 'output_token_details': {}}),\n",
+       " ToolMessage(content='Результат: 74', name='calculate', id='01936f43-3a2e-49f1-82ea-80ca895e328e', tool_call_id='call_aefe29e8a75e4af4aa0b84c0'),\n",
+       " AIMessage(content='The result of the calculation $10 + 8 \\\\times 8$ is 74.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 22, 'prompt_tokens': 275, 'total_tokens': 297, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'reasoning_tokens': 0}, 'model_provider': 'openai', 'model_name': 'Qwen/Qwen3-Next-80B-A3B-Instruct', 'system_fingerprint': None, 'id': '290e14a0f29743368ffba0cf1942d3fd', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--dbb8eecb-7823-4042-aefa-28b0bc7fea54-0', usage_metadata={'input_tokens': 275, 'output_tokens': 22, 'total_tokens': 297, 'input_token_details': {}, 'output_token_details': {}})]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
