chore: added fallback model for mcp guides

--- a/examples/tools/01-mcp-creation/combined-server/example.ipynb
+++ b/examples/tools/01-mcp-creation/combined-server/example.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "Hbol",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import marimo as mo"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "MJUe",
    "metadata": {},
@@ -32,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bkHC",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen abc>:106: LangGraphDeprecatedSinceV10: AgentStatePydantic has been moved to `langchain.agents`. Please update your import to `from langchain.agents import AgentStatePydantic`. Deprecated in LangGraph V1.0 to be removed in V2.0.\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "import os\n",
@@ -49,7 +47,7 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "BASE_MODEL = os.getenv(\"BASE_MODEL\") or \"\""
+    "BASE_MODEL = os.getenv(\"BASE_MODEL\") or \"qwen/qwen3-235b-a22b-2507\""
    ]
   },
   {
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "SFPL",
    "metadata": {},
    "outputs": [],
@@ -156,31 +154,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "RGSE",
+   "execution_count": 3,
+   "id": "d5f45800-be34-48a4-add0-60dfccb04c50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "asyncio.run(main())"
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "Kclp",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "RGSE",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available tools from combined server:\n",
+      "  - convert_document\n",
+      "  - analyze_document\n",
+      "  - calculate\n",
+      "  - count_words\n",
+      "  - reverse_text\n",
+      "  - to_uppercase\n",
+      "\n",
+      "Agent response:\n",
+      "\n",
+      "Here is the multi-step analysis:\n",
+      "\n",
+      "1. **Document Statistics**  \n",
+      "   - Document: `test.pdf`  \n",
+      "   - Size: 23,354 characters  \n",
+      "   - Word Count: 3,655 words  \n",
+      "   - Lines: 547  \n",
+      "\n",
+      "2. **Factorial of Word Count**  \n",
+      "   The calculation of `3655!` (factorial of 3655) could not be performed due to computational limitations or syntax issues in the expression evaluator. This number is extremely large and typically requires special handling.\n",
+      "\n",
+      "3. **Reversed Document Name**  \n",
+      "   The reversed name of `test.pdf` is: `fdp.tset`\n",
+      "\n",
+      "Let me know if you'd like an alternative approach for computing the factorial.\n"
+     ]
+    }
+   ],
    "source": [
-    "## Преимущества модульной архитектуры\n",
-    "\n",
-    "- **Переиспользуемость**: базовые серверы можно использовать в разных проектах\n",
-    "- **Тестируемость**: каждый сервер тестируется отдельно\n",
-    "- **Поддерживаемость**: изменения в одном сервере не затрагивают другие\n",
-    "- **Гибкость**: можно комбинировать серверы в разных конфигурациях\n",
-    "\n",
-    "Такой подход позволяет строить библиотеку переиспользуемых компонентов."
+    "asyncio.run(main())"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
