--- a/examples/tools/01-mcp-creation/example.ipynb
+++ b/examples/tools/01-mcp-creation/example.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "Hbol",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import marimo as mo"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "MJUe",
    "metadata": {},
@@ -32,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bkHC",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen abc>:106: LangGraphDeprecatedSinceV10: AgentStatePydantic has been moved to `langchain.agents`. Please update your import to `from langchain.agents import AgentStatePydantic`. Deprecated in LangGraph V1.0 to be removed in V2.0.\n"
+     ]
+    }
+   ],
    "source": [
     "import asyncio\n",
     "import os\n",
@@ -49,7 +47,7 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "BASE_MODEL = os.getenv(\"BASE_MODEL\") or \"\""
+    "BASE_MODEL = os.getenv(\"BASE_MODEL\") or \"qwen/qwen3-235b-a22b-2507\""
    ]
   },
   {
@@ -80,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "Xref",
    "metadata": {},
    "outputs": [],
@@ -135,32 +133,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "BYtC",
+   "execution_count": 4,
+   "id": "6cce6a46-cb57-42c5-8877-b25610768fab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "asyncio.run(main())"
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "RGSE",
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "BYtC",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available tools:\n",
+      "  - convert_document\n",
+      "  - analyze_document\n",
+      "Agent response:\n",
+      "\n",
+      "The manul (Otocolobus manul) is a small wild cat species adapted to cold, arid steppe and semi-desert ecosystems across Central and Western Asia. It exhibits unique morphological and behavioral traits, including dense fur for insulation, cryptic coloration for camouflage, and reliance on rocky outcrops and burrows for shelter. The species is solitary, with males having larger home ranges (avg. 98.8 km²) than females (avg. 23.1 km²) in Mongolia, and shows seasonal breeding patterns tied to photoperiod.\n",
+      "\n",
+      "Manuls primarily feed on small mammals, especially pikas, which constitute over 50% of their diet. They employ various hunting techniques such as stalking, ambush, and flushing prey. Despite a broad geographic range, populations are sparse and patchily distributed due to habitat specialization, predation pressure, and low prey availability.\n",
+      "\n",
+      "Threats include predation by raptors, foxes, wolves, and domestic dogs, as well as human-related mortality. High kitten mortality (up to 68%) and limited dispersal contribute to low population densities. The species also shows susceptibility to diseases like toxoplasmosis and feline immunodeficiency virus (FIV).\n",
+      "\n",
+      "Conservation concerns center on habitat fragmentation, loss of denning sites, and regional extinctions, particularly in the southwestern part of its range. Protection of suitable habitats and key resources like burrows and rocky shelters is essential for long-term survival.\n"
+     ]
+    }
+   ],
    "source": [
-    "## Преимущества MCP\n",
-    "\n",
-    "По сравнению с обычным tool calling, MCP предоставляет:\n",
-    "\n",
-    "- **Стандартизацию**: один сервер работает с любыми совместимыми клиентами\n",
-    "- **Автоматическое обнаружение**: клиент узнает о возможностях через `tools/list`\n",
-    "- **Переиспользуемость**: сервер можно использовать в разных проектах без изменений\n",
-    "- **Изоляцию**: сервер работает в отдельном процессе\n",
-    "- **Масштабируемость**: легко добавлять новые инструменты и развертывать удаленно"
+    "asyncio.run(main())"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
