enh: upd mcp theory

--- a/examples/tools/01-mcp-creation/example.ipynb
+++ b/examples/tools/01-mcp-creation/example.ipynb
@@ -5,11 +5,102 @@
    "id": "MJUe",
    "metadata": {},
    "source": [
-    "# Часть 2: Создание собственного MCP-сервера\n",
+    "# Часть 2: Создание MCP-сервера\n",
     "\n",
     "В этом примере мы создадим собственный MCP-сервер с использованием FastMCP и подключим его к агенту через STDIO транспорт.\n",
     "\n",
     "MCP решает проблемы обычного tool calling через стандартизацию и переиспользуемость."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a32c89a-c442-4eaf-88ce-e0ff96848b8d",
+   "metadata": {},
+   "source": [
+    "## Как это работает?\n",
+    "\n",
+    "MCP - протокол - по сути из себя представляет HTTP ручки с определенным порядком вызова, в котором обмен построен на стандартизированных JSON-сообщениях.\n",
+    "\n",
+    "Задействуется три компонента:\n",
+    "\n",
+    "1. **MCP Server** - отдельная программа (локальный процесс через stdio или удалённый сервис через HTTP+SSE), которая предоставляет доступ к ресурсам, **инструментам** и промптам через стандартизированный MCP-интерфейс на базе JSON-RPC 2.0. Например, серверы для работы с файловой системой, историей коммитов, базами данных и т.д.\n",
+    "2. **MCP Client** - модуль внутри хоста, который устанавливает соединение с конкретным MCP-сервером, обменивается JSON-RPC сообщениями и управляет жизненным циклом соединения.\n",
+    "3. **Host** - приложение-контейнер (IDE-ассистент или ваш Python-процесс с мультиагентной системой), которое содержит LLM, управляет MCP-клиентами, координирует взаимодействие с пользователем и агрегирует контекст от разных серверов.\n",
+    "\n",
+    "Основная схема такая: Знакомство >> Запрос >> Ответ\n",
+    "\n",
+    "- На **первом** шаге мсп-клиент спрашивает у мсп-сервера что второй умеет. В ответ сервер показывает свое описание и список доступных инструментов. Выглядеть это может так:\n",
+    "\n",
+    "```json\n",
+    "// Сообщение от MCP Server -> MCP Client\n",
+    "{\n",
+    "  \"jsonrpc\": \"2.0\",\n",
+    "  \"result\": {\n",
+    "    \"tools\": [{\n",
+    "        \"name\": \"calculator_arithmetic\",  // уникальное имя операции\n",
+    "        \"title\": \"Calculator\",\n",
+    "        \"description\": \"Perform mathematical calculations including basic arithmetic, trigonometric functions, and algebraic operations\",  // понятное для LLM описание\n",
+    "        \"inputSchema\": {  // параметры метода (тула)\n",
+    "          \"type\": \"object\",\n",
+    "          \"properties\": {\n",
+    "            \"expression\": {\n",
+    "              \"type\": \"string\",\n",
+    "              \"description\": \"Mathematical expression to evaluate (e.g., '2 + 3 * 4', 'sin(30)', 'sqrt(16)')\"\n",
+    "            }\n",
+    "          },\n",
+    "          \"required\": [\"expression\"]\n",
+    "        }\n",
+    "      }\n",
+    "  ]}\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "    Затем хост передает такого вида сообщение вместе с воепросом в LLM. Затем сама модель решает что делать и знает, что у нее есть инструмент (в данном примере - калькулятор).\n",
+    "\n",
+    "- На **втором** шаге LLM анализирует вопрос и решает нужно ли для ответа вызвать тул. НАпример с `experession = \"2 + 2 * 2\"`. Хост через клиент отправляет запрос на сервер такого вида:\n",
+    "\n",
+    "```json\n",
+    "// Сообщение от Host через MCP Client -> MCP Server\n",
+    "{\n",
+    "  \"jsonrpc\": \"2.0\",\n",
+    "  \"id\": 3,\n",
+    "  \"method\": \"tools/call\",\n",
+    "  \"params\": {\n",
+    "    \"name\": \"calculator_arithmetic\",\n",
+    "    \"arguments\": { \"expression\": \"2 + 2 * 2\" }\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "    Это и есть вызов функции-тула\n",
+    "\n",
+    "- На **третьем** шаге сервер получает запрос, выполняет вычисления и возращает результат клиенту, а тот передает хосту, который затем направляет в LLM. Пример результата:\n",
+    "\n",
+    "```json\n",
+    "// Сообщение от MCP Server -> MCP Client -> Host\n",
+    "{\n",
+    "  \"jsonrpc\": \"2.0\",\n",
+    "  \"id\": 3,\n",
+    "  \"result\": {\n",
+    "    \"content\": [{\n",
+    "        \"type\": \"text\",\n",
+    "        \"text\": \"8\"\n",
+    "    }]\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "    Теперь модель решает готова ли она дать окончательный ответ.\n",
+    "\n",
+    "> **Важно**: информация о подключенных мсп-серверах и мета-информация из них съедают контекст LLM. Нужно быть аккуратнее с описанием серверов и тулов. Также, не стоит расчитывать, что дав модели 100 мсп-серов вы будете получать хороший результат, скорее вы просто запутаете модель или заполните ей контекстое окно."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71af55ca-e99a-4116-ace1-6ccc9e7459a8",
+   "metadata": {},
+   "source": [
+    "## Какие использовать библиотеки?\n",
+    "\n",
+    "В данном примере рассмотрим [FastMCP](https://gofastmcp.com/getting-started/welcome) (обертка над Starlette), тк эта библиотека активно развивается и поддерживает много фич. Но главное здесь - соблюдать протокол. Поэтому можно использовать и другие фреймворки, включая [оффициальную имплементацию MCP](https://github.com/modelcontextprotocol/python-sdk). **В том числе на других языках.**"
    ]
   },
   {
